# sopel-iplookup

./: Makefile  NEWS  README.rst  pyproject.toml  requirements.txt  setup.cfg
sopel_iplookup/: config.py  plugin.py
