[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
platforms = ["Linux x86, x86-64"]

[tool.setuptools.packages.find]
include = ["sopel_iplookup", "sopel_iplookup.*"]
namespaces = false

[tool.setuptools.dynamic]
readme = { file=["README.rst", "NEWS"], content-type="text/x-rst" }

[project]
name = "sopel-iplookup"
version = "1.1.0"
description = "IP Lookup plugin for Sopel"
keywords = [
  "sopel",
  "plugin",
  "bot",
  "irc",
]
maintainers = [
  { name="dgw", email="dgw@technobabbl.es" },
  { name="Florian Strzelecki", email="florian.strzelecki@gmail.com" },
  { name="SnoopJ", email="snoopjedi@gmail.com" },
]
authors = [
  { name="Dimitri Molenaars" },
  { name="Elad Alfassa", email="elad@fedoraproject.org" },
  { name="dgw", email="dgw@technobabbl.es" },
  { name="Florian Strzelecki", email="florian.strzelecki@gmail.com" },
  { name="SnoopJ", email="snoopjedi@gmail.com" },
]

dynamic = ["readme"]
license = { text="EFL-2.0" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: Eiffel Forum License (EFL)",
    "License :: OSI Approved :: Eiffel Forum License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
]
requires-python = ">=3.7, <4"
dependencies = [
    "sopel>=7.1",
    "geoip2",
]

[project.urls]
"Homepage" = "https://github.com/sopel-irc/sopel-iplookup"
"Bug Tracker" = "https://github.com/sopel-irc/sopel-iplookup/issues"

[project.entry-points."sopel.plugins"]
iplookup = "sopel_iplookup.plugin"
